JAVA_OPTS Supports JVM_OPTS environment variable